overflow bug lastfm

--- a/css/home.css
+++ b/css/home.css
@@ -117,6 +117,8 @@
     width: 50%;
     border: 1px solid black;
     text-align: center;
+    overflow-y: scroll;
+    overflow-x: hidden;
     overscroll-behabior: none; 
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none; /* Firefox */
